--- a/WebContent/css/icm.css
+++ b/WebContent/css/icm.css
@@ -111,6 +111,14 @@ input{
 	padding-bottom:2px;
 	}	
 	
+.forgetlogin{
+	font-size:12px;
+	float:right;
+	width:480px;
+	padding-top:10px;
+	padding-right:10px;
+	padding-bottom:2px;
+	}	
 .login a{
 	color:#CC9;
 	}	
